<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_main_img_description"
        android:src="@drawable/splitworld" />

    <EditText
        android:id="@+id/editTextNameCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:autofillHints="Mail"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:hint="@string/login_name_hint"
        android:background="@drawable/edittext_border"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editTextEmailCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNameCreate"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Mail"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:hint="@string/login_user_hint"
        android:background="@drawable/edittext_border"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmailCreate"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint"
        android:background="@drawable/edittext_border"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint2"
        android:background="@drawable/edittext_border"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editConfirmPassword"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/create_account"/>

    <TextView
        android:id="@+id/labelHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:text="@string/login_Have_Account"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textStyle="bold"/>
</RelativeLayout>