<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_main_img_description"
        android:src="@drawable/splitworld" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="50dp"
        android:autofillHints="Mail"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:hint="@string/login_user_hint"
        android:background="@drawable/edittext_border"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/login_password_hint"
        android:background="@drawable/edittext_border"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:autofillHints="Password"
        android:textColorHint="@color/black"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login_LoginButton_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:text="@string/login_CreateAccount_label"
        />

    <Button
        android:id="@+id/buttonNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="monospace"
        android:textSize="15sp"
        android:backgroundTint="@color/green"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="5dp"
        android:text="@string/login_WithoutAccount_text" />

</RelativeLayout>